force-app/main/default/objects/ucinn_ascendv2__Skip_Record_Type_Selection__c/ucinn_ascendv2__Skip_Record_Type_Selection__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Skip Record Type Selection</label>
</CustomObject>