force-app/main/default/objects/ucinn_ascendv2__Skip_Record_Type_Selection__c/fields/ucinn_ascendv2__Default_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Default_Record_Type_ID__c</fullName>
    <label>Default Record Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>