force-app/main/default/objects/ucinn_ascendv2__Skip_Record_Type_Selection__c/fields/ucinn_ascendv2__Skip_Record_Type_Selection__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Skip_Record_Type_Selection__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Skip Record Type Selection</label>
    <type>Checkbox</type>
</CustomField>